<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">




    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/off_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/IndentFromEdge_activity_main_indentFromTheEdgeOfApp_32sp"
        android:layout_marginBottom="@dimen/IndentFromEdge_activity_main_indentFromTheEdgeOfApp_32sp"
        android:background="@drawable/off_button_gradient"
        android:onClick="onClickForOffButton"
        android:text="@string/activity_main_offButtonLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlHardcoded"
        android:theme="@style/buttonStyle"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/on_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/IndentFromEdge_activity_main_indentFromTheEdgeOfApp_32sp"
        android:layout_marginBottom="@dimen/IndentFromEdge_activity_main_indentFromTheEdgeOfApp_32sp"
        android:background="@drawable/on_button_gradient"
        android:onClick="onCLickForOnButton"
        android:text="@string/activity_main_onButtonLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlHardcoded"
        android:theme="@style/buttonStyle"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reminderMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/IndentFromEdge_activity_main_indentFromTheEdgeOfApp_32sp"
        android:layout_marginTop="@dimen/IndentFromEdge_activity_main_indentFromTheEdgeOfApp_32sp"
        android:layout_marginEnd="@dimen/IndentFromEdge_activity_main_indentFromTheEdgeOfApp_32sp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reminderMessageEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_main_descriptionForEditTextWithReminder"
            android:inputType="text"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/timeValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/IndentFromEdge_activity_main_indentFromTheEdgeOfApp_32sp"
        android:layout_marginEnd="@dimen/IndentFromEdge_activity_main_indentFromTheEdgeOfApp_32sp"
        app:layout_constraintBottom_toTopOf="@+id/off_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminderMessage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/timeValueEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_main_descriptionForEditTextWithTimeValue"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>



</androidx.constraintlayout.widget.ConstraintLayout>